# classificador-receita

./: .env.example  .gitignore  README.md  datapackage.yaml  manage.py  pyproject.toml  zensical.toml
.github/workflows/: deploy-docs.yml
_dev/: spec_django.md  spec_foreignKeys_vigencia.md  spec_foreingKeys.md  spec_itemClassificacao_criar_filho.md  spec_itemClassificacao_criar_nome.md  spec_itemClassificacao_foreignKeys_lookup.md  spec_itemClassificacao_mascara_apresentacao.md  spec_itemClassificacao_regras_hierarquia.md  spec_itemClassificacao_validar_hierarquia.md  spec_lista_abreviacoes.md  spec_lookup_hierarquia_por_codigo_admin.md  spec_parent_item_id.md  spec_validar_codigos.md  spec_validar_item_pai.md  spec_validar_qualidade.md  toDo.md
apps/core/: admin.py  admin_filters.py  admin_formatters.py  admin_handlers.py  admin_mixins.py  admin_widgets.py  alias_lexico_infer.py  alias_lexico_protocol.py  alias_lexico_run.py  alias_lexico_service.py  alias_lexico_termo_policy.py  apps.py  bitemporal_registry.py  bitemporal_service.py  bitemporal_update.py  classification_naming_abbrev.py  classification_naming_connectives.py  classification_naming_messages.py  classification_naming_validation.py  code_mask.py  domain_choices.py  exporter.py  forms.py  item_classificacao_code_lookup.py  item_classificacao_suggest_child_code.py  models.py  models_alias_lexico.py  models_base_legal.py  null_normalization.py  parent_item_validation.py  temporal_fk_resolution.py  tests.py  tests_admin_formatters.py  tests_classification_naming.py  tests_parent_item_validation.py  tests_suggest_child_code.py  views.py  vigencia_fk_validation.py
apps/core/migrations/: 0001_initial.py  0002_alter_data_registro_to_date.py
classificador/: asgi.py  settings.py  urls.py  wsgi.py
docs/: index.md  projeto.md
docs/adr/: ADR-001-bitemporalidade.md  ADR-002-gsim.md  TEMPLATE.md  adr-001_bitemporalidade.md  adr-002_gsim.md  adr-003_chave-semantica.md  adr-004_governanca-banco.md  index.md
docs/assets/: consulta_siafi_ementario_corrente.xlsx  consulta_siafi_ementario_historico.xlsx  db_ementario_receita.csv  db_ementario_receita.xlsx  ementario-receita-MG_exemplo.md  ementario-receita-MG_exemplo.xlsx  exemplo_classificacao_receita.csv  exemplo_nivel_hierarquico.csv  exemplo_serie_classificacao.csv  exemplo_tabelas_schemas.md  exemplo_variante_classificacao.csv  exemplo_versao_classificacao.csv  exemplos-tabelas-ementario.md  gsim-statistical-classification-model_v1-1_unece-ONU_2015.md  gsim-statistical-classification-model_v1-1_unece-ONU_2015_notes.md  gsim_2015_notes.md  index.md  seed_base_legal.csv  seed_base_legal_tecnica.csv  seed_classificacao.csv  seed_item_classificacao.csv  seed_lista_abreviacoes.csv  seed_nivel_hierarquico.csv  seed_serie_classificacao.csv  seed_variante_classificacao.csv  seed_versao_classificacao.csv
docs/assets/referencias/: db_ementario_receita.xlsx  ementario_receita_mg_2002_sisor.xlsx  ementario_receita_mg_2003_sisor.xlsx  ementario_receita_mg_2004_sisor.xlsx  ementario_receita_mg_2005_sisor.xlsx  ementario_receita_mg_2006_sisor.xlsx  ementario_receita_mg_2007_sisor.xlsx  ementario_receita_mg_2008_sisor.xlsx  ementario_receita_mg_2009_sisor.xlsx  ementario_receita_mg_2010_sisor.xlsx  ementario_receita_mg_2011_sisor.xlsx  ementario_receita_mg_2012_sisor.xlsx  ementario_receita_mg_2013_sisor.xlsx  ementario_receita_mg_2014_sisor.xlsx  ementario_receita_mg_2015_sisor.xlsx  ementario_receita_mg_2016_sisor.xlsx  ementario_receita_mg_2017_sisor.xlsx  ementario_receita_mg_2018_sisor.xlsx  ementario_receita_mg_2019_sisor.xlsx  ementario_receita_mg_2020_sisor.xlsx  ementario_receita_mg_2021_sisor.xlsx  ementario_receita_mg_2022_sisor.xlsx  ementario_receita_mg_2023_sisor.xlsx  ementario_receita_mg_2024_sisor.xlsx  ementario_receita_mg_2025_sisor.xlsx  ementario_receita_mg_2026_sisor.xlsx  ementario_receita_uniao_2004_manual-de-receitas_1ed.doc  ementario_receita_uniao_2005_manual-de-receitas_2ed.doc  ementario_receita_uniao_2006_manual-de-receitas_3ed.rtf  ementario_receita_uniao_2008_manual-de-receitas_5ed.doc  ementario_receita_uniao_2014_mcasp_6ed.xlsx  ementario_receita_uniao_2015.xlsx  (+22 more)
docs/base-legal/: bra_cr_88_1988_planalto.md  bra_lo_4320_1964_planalto.md  bra_man_mcasp_2011_stn.md  bra_man_mcasp_2012_stn.md  bra_man_mcasp_2013_stn.md  bra_man_mcasp_2015_stn.md  bra_man_mcasp_2017_stn.md  bra_man_mcasp_2019_stn.md  bra_man_mcasp_2022_stn.md  bra_man_mcasp_2024_stn.md  bra_man_mcasp_2025_stn.md  bra_port-conj_163_2001_stn.md  bra_port-conj_5_2015_stn.md  mg_ce_89_1989_almg.md
docs/base-legal-tecnica/: bra_cr_88_1988_planalto.md  bra_lo_4320_1964_planalto.md  bra_man_mcasp_2011_stn.md  bra_man_mcasp_2012_stn.md  bra_man_mcasp_2013_stn.md  bra_man_mcasp_2015_stn.md  bra_man_mcasp_2017_stn.md  bra_man_mcasp_2019_stn.md  bra_man_mcasp_2022_stn.md  bra_man_mcasp_2024_stn.md  bra_man_mcasp_2025_stn.md  bra_port-conj_163_2001_stn.md  bra_port-conj_5_2015_stn.md  mg_ce_89_1989_almg.md
docs/erd/: erd.dot  index.md
docs/instalacao/: configurar-postgresql.md
docs/referencias/: adr_architecture-decision-record_notes.md  adr_architecture_decision_record_notes.md  best-practice-guidelines-international-classification_usd-ONU_2022.md  best-practice-guidelines-international-classification_usd-ONU_2022.url  dmbok_data_management_body_of_knowledge_dama_2ed_2017.md  gsim_v1-1_unece-ONU_2015_notes.md  gsim_v1_1_unece_ONU_2015.md  gsim_v2_0_unece_ONU_2023.md  index.md  scd_slowly-changing-dimensions.url
quality/: quality-rules.yaml  quality_rules.yaml
schemas/: README.md  base-legal.yaml  base_legal.yaml  base_legal_tecnica.yaml  classificacao.yaml  classificacao_receita.yaml  item_classificacao.yaml  lista_abreviacoes.yaml  nivel_hierarquico.yaml  serie_classificacao.yaml  variante_classificacao.yaml  versao_classificacao.yaml
schemas/dominios/: README.md  orgaos_entidades.yaml
scripts/: __init__.py  alias_lexico_update.py  aliases_list_update.py  generate_erd.py  validate_code.py  validate_datapackage.py  validate_domains.py  validate_quality.py  validate_schemas.py
(+22 files in other folders)
