[project]
name = "classificador-receita"
version = "0.1.0"
description = "Sistema de Gestão do Classificador de Natureza de Receita do Estado de Minas Gerais"
authors = [
    {name = "SPLOR-MG", email = "aid@planejamento.mg.gov.br"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "frictionless>=5.18.0,<6.0.0",
    "taskipy>=1.12.0,<2.0.0",
    "zensical (>=0.0.15,<0.0.16)",
    "django (>=6.0,<7.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "black>=24.0.0,<25.0.0",
    "ruff>=0.1.0,<0.2.0",
]

[tool.poetry]
package-mode = false

[tool.taskipy.tasks]
# Django
dev-server = { cmd = "python manage.py runserver", help = "Liga servidor de desenvolvimento." }

# Documentation
build-docs = { cmd = "zensical build --clean", help = "Gera a documentação estática com Zensical removendo antes qualquer build antigo (--clean garante atualização e evita arquivos obsoletos)" }
serve = { cmd = "zensical serve", help = "Inicia o servidor de preview local para visualização da documentação em tempo real" }

# Utils
validar-schemas = { cmd = "python scripts/validate_schemas.py", help = "Valida os schemas Frictionless e o datapackage.yaml principal." }
gerar-erd = { cmd = "python scripts/generate_erd.py", help = "Gera o diagrama de entidade-relacionamento (ERD) do banco de dados." }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

