[project]
name = "classificador-receita"
version = "0.1.0"
description = "Sistema de Gestão do Classificador de Natureza de Receita do Estado de Minas Gerais"
authors = [
    {name = "SPLOR-MG", email = "aid@planejamento.mg.gov.br"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "frictionless>=5.18.0,<6.0.0",
    "pyyaml>=6.0,<7.0",
    "taskipy>=1.12.0,<2.0.0",
    "zensical (>=0.0.15,<0.0.16)",
    "psycopg2>=2.9,<3.0",
    "django (>=6.0,<7.0)",
]

[project.optional-dependencies]
# Para instalar extras: poetry install --extras <nome_do_extra>  (ou: poetry install -E <nome_do_extra>)
dev = [
    "pytest>=8.0.0,<9.0.0",
    "black>=24.0.0,<25.0.0",
    "ruff>=0.1.0,<0.2.0",
]
pdf = [
    "marker-pdf>=1.0,<2.0",
]
# ERD: para gerar PNG além do .dot é necessário o Graphviz no sistema (ex.: sudo apt-get install graphviz)
erd = [
    "graphviz>=0.20.0,<1.0",
]

[tool.poetry]
package-mode = false

[tool.taskipy.tasks]
# Django
migrate = { cmd = "python manage.py migrate", help = "Migra mudanças para banco de dados." }
dev-server = { cmd = "python manage.py runserver", help = "Liga servidor de desenvolvimento." }

# Documentation
build-docs = { cmd = "zensical build --clean", help = "Gera a documentação estática com Zensical removendo antes qualquer build antigo (--clean garante atualização e evita arquivos obsoletos)" }
serve = { cmd = "zensical serve -a localhost:8001", help = "Inicia o servidor de preview da documentação em http://localhost:8001 (porta 8001 para não conflitar com o Django em 8000)." }

# Utils
validar-tudo = { cmd = "python scripts/validate_schemas.py && python scripts/validate_code.py && python scripts/validate_quality.py", help = "Executa validar-schemas, validar-codigos e validar-qualidade em sequência." }
validar-schemas = { cmd = "python scripts/validate_schemas.py", help = "Valida os schemas Frictionless e o datapackage.yaml principal. Rode com --resource-name=<nome_do_recurso> para validar apenas um recurso específico." }
validar-codigos = { cmd = "python scripts/validate_code.py", help = "Valida a quantidade de dígitos de receita_cod conforme a classificação (registro e vigência, SCD-2)." }
validar-dominios = { cmd = "python scripts/validate_domains.py", help = "Valida domínios compartilhados (custom.domainRef) e a presença de 'values' nos arquivos de domínio em schemas/dominios/." }
validar-qualidade = { cmd = "python scripts/validate_quality.py", help = "Aplica as regras de qualityDimensions (quality_rules.yaml) aos dados dos recursos." }
gerar-erd = { cmd = "python scripts/generate_erd.py", help = "Gera o diagrama de entidade-relacionamento (ERD) do banco de dados." }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

